# klappstuhl_me

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.cargo/: config.toml
crates/kls-ui/: Cargo.toml
crates/kls-ui/assets/: timestamps.js
crates/kls-ui/src/: lib.rs
crates/kls-web-core/: Cargo.toml
crates/kls-web-core/src/: database.rs  flash.rs  lib.rs  migrations.rs  token.rs
crates/percy-client/: Cargo.toml
crates/percy-client/src/: lib.rs  types.rs
dashboard/: Cargo.toml
dashboard/src/: main.rs
docs/: features.md  setup.md
sql/: 0.sql  1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  23.sql  24.sql  25.sql  26.sql  27.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
src/: alerts.rs  audit.rs  auth.rs  backup.rs  cached.rs  cli.rs  cloudflare.rs  codeimage.rs  config.rs  database.rs  discord.rs  docker.rs  error.rs  exttools.rs  filters.rs  flash.rs  geoip.rs  headers.rs  key.rs  lib.rs  logging.rs  main.rs  metadata.rs  models.rs  ratelimit.rs  routes.rs  scan.rs  scope.rs  ssh.rs  state.rs  token.rs  totp.rs  utils.rs
src/admin/: cron.rs  mod.rs  sanitizer.rs  security.rs  updates.rs
src/admin/audit/: mod.rs  routes.rs
src/admin/backup/: mod.rs  routes.rs  s3.rs
src/admin/dbadmin/: mod.rs  safety.rs
src/admin/docker/: mod.rs  routes.rs
src/admin/firewall/: mod.rs  routes.rs  storage.rs
src/admin/health/: checker.rs  mod.rs
src/admin/metrics/: docker.rs  host.rs  mod.rs
src/admin/proxy/: mod.rs
src/admin/secrets/: mod.rs  routes.rs  rules.rs  scanner.rs
src/admin/ssh/: mod.rs
src/auth/: mod.rs  token.rs  totp.rs
src/core/: audit.rs  cli.rs  config.rs  database.rs  error.rs  filters.rs  logging.rs  migrations.rs  mod.rs  models.rs  state.rs  utils.rs
src/firewall/: backend.rs  lockout.rs  mod.rs  storage.rs  sync.rs
src/health/: checker.rs  mod.rs  storage.rs
src/integrations/: ai.rs  cf_tunnel.rs  cloudflare.rs  discord.rs  exttools.rs  geoip.rs  mod.rs  percy.rs
src/media/: metadata.rs  mod.rs  scan.rs  thumbnail.rs
src/metrics/: alerts.rs  docker.rs  host.rs  mod.rs  storage.rs
src/platform/: cookies.rs  flash.rs  headers.rs  mod.rs  ratelimit.rs  scope.rs
src/postgres/: mod.rs  safety.rs
src/proxy/: mod.rs  render.rs  storage.rs
src/routes/: admin.rs  audit.rs  auth.rs  backups.rs  docker.rs  firewall.rs  health.rs  image.rs  logs.rs  metrics.rs  mod.rs  postgres.rs  proxy.rs  sanitizer.rs  secrets.rs  security.rs  services.rs  spotlight.rs  ssh.rs  ws.rs
src/secrets/: mod.rs  rules.rs  scanner.rs  storage.rs
src/services/: alerts.rs  audit.rs  backup.rs  cron.rs  docker.rs  mod.rs  percy_moderation.rs  percy_stats.rs  ssh.rs  updates.rs
src/site/: account.rs  changelog.rs  discord_oauth.rs  image.rs  links.rs  mod.rs  paste.rs  spotlight.rs
src/web/: flash.rs  mod.rs  ratelimit.rs  scope.rs
static/: admin.css  admin.js  admin_audit.css  admin_audit.js  admin_docker.css  admin_docker_snapshots.css  admin_firewall.css  admin_firewall.js  admin_health.css  admin_health.js  admin_invites.js  admin_metrics.css  admin_metrics.js  admin_postgres.css  admin_postgres.js  admin_proxy.css  admin_proxy.js  admin_sanitizer.css  admin_sanitizer.js  admin_secrets.css  admin_secrets.js  admin_security.js  admin_services.css  admin_services.js  admin_ssh.css  admin_ssh.js  admin_ssh_audit.css  admin_ssh_audit.js  audit.css  audit.js  auth.css  auth.js  base.css  base.js  discord_command_syntax_guide.md  files.js  image.css  image_list.css  images.js  index.css  (+8 more)
static/css/: account.css  api.css  auth.css  base.css  changelog.css  dashboard.css  glass.css  image.css  image_list.css  index.css  links.css  paste.css  spotlight.css  terminal.css
static/js/: account.js  auth.js  base.js  files.js  image_view.js  images.js  index.js  insights.js  links.js  paste.js  paste_list.js  paste_view.js  percy-dashboard.js  spotlight.js  table-sort.js  terminal.js  timestamps.js  username.js
templates/: account.html  account_2fa.html  admin.html  admin_audit.html  admin_backups.html  admin_docker.html  admin_docker_snapshots.html  admin_firewall.html  admin_health.html  admin_invites.html  admin_layout.html  admin_logs.html  admin_metrics.html  admin_postgres.html  admin_proxy.html  admin_sanitizer.html  admin_secrets.html  admin_security.html  admin_services.html  admin_ssh.html  admin_ssh_audit.html  api.html  api_description.md  audit.html  changelog.html  contact.html  error.html  help.html  image.html  images.html  index.html  layout.html  login.html  login_2fa.html  projects.html  services.html  signup.html  status.html  terminal.html
templates/admin/: admin.html  admin_audit.html  admin_backups.html  admin_certs.html  admin_database.html  admin_docker.html  admin_docker_snapshots.html  admin_firewall.html  admin_health.html  admin_invites.html  admin_layout.html  admin_logs.html  admin_metrics.html  admin_postgres.html  admin_proxy.html  admin_sanitizer.html  admin_secrets.html  admin_security.html  admin_ssh.html  admin_ssh_audit.html
templates/api/: api.html  api_description.md
templates/auth/: account.html  account_2fa.html  account_layout.html  account_recovery_codes.html  login.html  login_2fa.html  signup.html  user_public.html
templates/images/: image.html  images.html
templates/links/: links.html
templates/paste/: burned.html  editor.html  embed.html  history.html  list.html  view.html
templates/percy/: _brand_badge.html  audit-log.html  audit_log.html  autoresponders.html  changelog.html  comics.html  commands.html  commands_public.html  dashboard_layout.html  discord_command_syntax_guide-v2.md  economy.html  emoji-stats.html  emoji_stats.html  giveaways.html  guild.html  guild_not_found.html  guilds.html  highlights.html  home.html  landing.html  leaderboard.html  legal.html  leveling.html  members.html  music.html  no_discord.html  overview.html  percy_layout.html  polls.html  stats.html  tags.html  temp-channels.html  temp_channels.html  user.html  user_dashboard.html
(+176 files in other folders)
