[package]
name = "klappstuhl_me"
version = "1.0.0"
edition = "2021"
license = "AGPL-v3"
description = "A custom information website about Klappstuhl and API support."

# Local staging workspace for the crates being extracted for the dashboard split
# (see DASHBOARD_DECOUPLING_PLAN.md, Phase 1). These graduate into the standalone
# `klappstuhl-shared` repo (tag-pinned git deps) at Phase 5; until then they live
# here as path-dependency members so iteration stays fast and revertible.
[workspace]
members = ["crates/percy-client", "crates/kls-ui", "crates/kls-web-core", "dashboard"]

[dependencies]
percy-client = { path = "crates/percy-client" }
kls-ui = { path = "crates/kls-ui" }
kls-web-core = { path = "crates/kls-web-core" }
anyhow = "1.0.80"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.77"
askama = { version = "0.12.1", features = ["with-axum", "serde-json", "markdown"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["multipart", "ws"] }
base64 = "0.22"
bcrypt = "0.15"
brotli = "3.4.0"
bytes = "1.5.0"
socket2 = "0.5.10"
cookie = { version = "0.18.0", features = ["percent-encode"] }
crossbeam-channel = "0.5.11"
dirs = "5.0.1"
futures-util = "0.3.30"
getrandom = { version = "0.2.12", features = ["std"] }
hmac = "0.12.1"
sha1 = "0.10"
base32 = "0.5"
chacha20poly1305 = "0.10"
qrcode = "0.14"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["server-auto"] }
pin-project-lite = "0.2.13"
quick_cache = "0.4.1"
regex = "1.10.3"
reqwest = { version = "0.12.3", default-features = false, features = ["json", "rustls-tls", "stream"] }
rpassword = "7.3.1"
rusqlite = { version = "0.31.0", features = ["bundled", "time"] }
rustls-acme = { git = "https://github.com/Rapptz/rustls-acme/", branch = "update-deps", features = ["tokio"] }
sanitise-file-name = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
time = { version = "0.3.34", features = ["macros", "serde-human-readable"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.25"
tower = { version = "0.4.13", features = ["limit", "util"] }
tower-http = { version = "0.5.2", features = ["fs", "timeout", "normalize-path", "limit", "cors", "compression-full"] }
tracing = "0.1.40"
tracing-appender = { git = "https://github.com/Rapptz/tracing-appender" }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
utoipa = { version = "4.2.0", features = ["time", "axum_extras", "repr", "preserve_path_order"] }
nanoid = "0.4.0"
thiserror = "1"
tree_magic = "0.2.3"
bollard = { version = "0.17", default-features = false, features = ["ssl"] }
maxminddb = "0.24.0"
tokio-postgres = { version = "0.7", features = ["with-time-0_3", "with-serde_json-1", "with-uuid-1"] }
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
x509-parser = "0.15"
rustls = "0.22"
rustls-pki-types = "1"
webpki-roots = "0.26"

[profile.release]
# This is an I/O-bound web app (SQLite, HTTP, subprocess shelling), so it has no
# hot compute kernel that needs aggressive optimisation. The whole app is a
# single binary crate, so any source/template change recompiles all of it — and
# `opt-level = 3` on that much code is what dominates the build (~110s). So:
#   • opt-level = 1 on our own crate: basic opts, far faster codegen, negligible
#     runtime cost for glue code. Dependencies stay at 3 (see the override below).
#   • incremental = true: release builds skip incremental compilation by default;
#     with target/ persisted via the Docker cache mount, turning it on means a
#     small change recompiles only the affected codegen units, not the whole crate.
#   • codegen-units = 256: parallelise codegen across more units.
# LTO stays off (enabling it would make build times much worse).
opt-level = 1
incremental = true
codegen-units = 256

# Dependencies rarely change and are cached, so optimise them fully. This keeps
# their fingerprint identical to the previous default-release build, so applying
# this profile does NOT trigger a one-off recompile of the whole dependency tree
# — only our own crate rebuilds.
[profile.release.package."*"]
opt-level = 3
