[package]
name = "kls-web-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-v3"
description = "Shared web kernel for klappstuhl.me and the Percy dashboard: crypto primitives, SQLite access, and migrations."

[dependencies]
# Versions kept in sync with the workspace root so Cargo feature unification
# reuses a single build of each. rustls/std features are declared here too so
# the crate also builds standalone (unification only adds features).
anyhow = "1.0.80"
async-trait = "0.1.77"
axum = "0.7.4"
base64 = "0.22"
cookie = { version = "0.18.0", features = ["percent-encode"] }
crossbeam-channel = "0.5.11"
getrandom = { version = "0.2.12", features = ["std"] }
hmac = "0.12.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
time = { version = "0.3.34", features = ["macros"] }
tokio = { version = "1.36.0", features = ["sync", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
